examples/test/testpolicy5496.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5496
  namespace: namespace295
spec:
  podSelector:
    matchLabels:
      key3: value44
      key36: value11
      key28: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value49
      podSelector:
        matchLabels:
          key10: value9
